--- a/src/components/Promos/Promos.css
+++ b/src/components/Promos/Promos.css
@@ -3,16 +3,19 @@
     justify-content: space-around;
     padding: 20px;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .promo-item {
   position: relative;
   width: 500px;
+  max-width: 500px;
   height: 400px;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   transition: transform 0.3s ease;
+  margin-bottom: 20px;
 }
 
 .promo-item img {
@@ -39,6 +42,7 @@
 .promo-content h2 {
   margin: 0 0 10px;
   font-size: 24px;
+  text-align: center;
 }
 
 .centered-button {
@@ -52,5 +56,27 @@
   min-width: 100px;
   max-width: 150px;
   align-self: center; 
+  text-align: center;
 }
 
+@media (max-width: 768px) {
+  .promo-container {
+      justify-content: center; /* Center items on small screens */
+  }
+
+  .promo-item {
+      width: 100%;
+      height: 300px; /* Adjust height for smaller screens */
+      max-width: 100%; /* Ensure items fit within the container */
+  }
+
+  .promo-content h2 {
+      font-size: 18px; /* Adjust font size for smaller screens */
+  }
+
+  .centered-button {
+      padding: 8px 16px;
+      min-width: 80px;
+      max-width: 120px;
+  }
+}
