--- a/src/components/Promos/Promos.css
+++ b/src/components/Promos/Promos.css
@@ -8,8 +8,7 @@
 
 .promo-item {
   position: relative;
-  width: 500px;
-  max-width: 500px;
+  width: 30%;
   height: 400px;
   overflow: hidden;
   border-radius: 10px;
@@ -61,13 +60,15 @@
 
 @media (max-width: 768px) {
   .promo-container {
-      justify-content: center; /* Center items on small screens */
+      flex-direction: column;
+      align-items: center; /* Center items on small screens */
   }
 
   .promo-item {
       width: 100%;
       height: 300px; /* Adjust height for smaller screens */
-      max-width: 100%; /* Ensure items fit within the container */
+      max-width: 500px;
+      margin-bottom: 20px; /* Ensure items fit within the container */
   }
 
   .promo-content h2 {
