--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-/* General nav styles */
 nav {
   position: sticky;
   top: 0;
@@ -12,18 +11,15 @@ nav {
   box-shadow: 0 0 16px rgba(0,0,0,.15);
 }
 
-/* Icon styles */
 nav .userIcon,
 nav .cartIcon {
   font-size: 23px;
 }
 
-/* Scrolled nav style */
 .scrolled {
   background-color: white;
 }
 
-/* Nav menu styles */
 nav ul {
   display: flex;
   background-color: white;
@@ -72,6 +68,8 @@ nav .title span {
   transition: transform 0.5s ease;
 }
 
+
+
 .menu-icon.open {
   transform: rotate(180deg);
   margin-top: 0.7rem;
@@ -81,19 +79,19 @@ nav .title span {
   display: none;
 }
 
-.user-icon-container {
+.user-icon-container{
   display: flex;
   align-items: center;
+  justify-content: center;
   padding-left: 25px;
   margin-top: 6px;
 }
 
-.userIcon {
+.userIcon{
   margin-top: 0.1rem;
-  margin-right: 10px; /* Adjust margin to be consistent with cart icon */
+  margin-right: -15px;
 }
 
-/* Responsive styles */
 @media (max-width: 1000px) {
   .menu-icon {
     display: block;
@@ -138,21 +136,20 @@ nav .title span {
     align-items: center;
     position: absolute;
     top: 2.1rem;
-    right: 1rem; /* Adjust to move closer to the right edge */
-    gap: 10px; /* Adjust spacing between icons */
+    right: 6.7rem;
   }
 
-  .user-icon-container {
-    display: flex;
-    align-items: center;
+  .user-icon{
+    margin-bottom: 7px;
+    margin-right: 10px;
   }
 
-  .userIcon,
-  .cartIcon {
-    margin: 0; /* Remove extra margins to ensure icons are aligned */
+  .user-Icon{
+    font-size: 23px;
   }
 
   .mobile-icons a {
+    margin-left: 1rem;
     color: black;
   }
 
