--- a/src/components/Promos/Promos.css
+++ b/src/components/Promos/Promos.css
@@ -1,6 +1,6 @@
 .promo-container {
     display: flex;
-    
+    justify-content: center;
     padding: 20px;
     gap: 20px;
     flex-wrap: wrap;
